--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,21 +1,34 @@
-%h1 Статические страницы
-%p= link_to 'Новая страница', new_page_path
+-# content_for :title, "ФизОлимп. Олимпиады школьников"
 
-%table
-  %thead
-    %tr
-      %th id
-      %th= Page.human_attribute_name :name
-      %th= Page.human_attribute_name :title
-      %th= Page.human_attribute_name :parent_id
-      %th{:colspan => 2}= 'actions'
-  
-  %tbody
-    - for page in @pages
-      %tr{ :class => cycle(:odd, :even) }
-        %td= page.id
-        %td= page.name
-        %td= page.title
-        %td= page.parent_id
-        %td== #{link_to 'show', page.url},
-        %td== #{link_to 'edit', edit_page_path(page)}
+.lenta-container
+	%h1{:style => 'vertical-align: bottom;'} Новостнаяя лента
+.news-block
+	%h2 
+		%a Предварительные результаты проверки теоретического тура Зонального этапа Московской области
+	%p Доступны предварительные результаты теоретического тура регионального этапа Всероссийской олимпиады школьников по физике.
+	%p Если вы не согласны со своими результатами, то присылайте заявление на электронный адрес physolymp@gmail.com с указанием класса участия, фамилии, имени участника и номера задачи, которая вызывает у вас несогласие. Приём заявлений осуществляется 14 января. Заявления, полученные позже, не рассматриваются. В этот же день вы получите ответ с комментариями.
+	%p Смотреть результаты 9-го класса, 10-го класса, 11-го класса.
+	.pull-left
+		%img.comment-icon{ :src => '/images/main/comment.png' }
+		%span.number 17 
+		%a.comments отзывов
+	.pull-right
+		%span.added Добавил
+		%a.name Ерофеев Иван
+		%span.time 19 декабря 2011 в 17:30
+	.clear
+.news-block
+	%h2 
+		%a Предварительные результаты проверки теоретического тура Зонального этапа Московской области
+	%p Доступны предварительные результаты теоретического тура регионального этапа Всероссийской олимпиады школьников по физике.
+	%p Если вы не согласны со своими результатами, то присылайте заявление на электронный адрес physolymp@gmail.com с указанием класса участия, фамилии, имени участника и номера задачи, которая вызывает у вас несогласие. Приём заявлений осуществляется 14 января. Заявления, полученные позже, не рассматриваются. В этот же день вы получите ответ с комментариями.
+	%p Смотреть результаты 9-го класса, 10-го класса, 11-го класса.
+	.pull-left
+		%img.comment-icon{ :src => '/images/main/comment.png' }
+		%span.number 17 
+		%a.comments отзывов
+	.pull-right
+		%span.added Добавил
+		%a.name Ерофеев Иван
+		%span.time 19 декабря 2011 в 17:30
+	.clear
